# simple_ppocr6

./: .gitignore  README.md  download_models.py  ocr-http-service.py  ocr_image.py  pyproject.toml  requirements-gpu.txt  requirements.txt  winclip_ocr.py
hooks/: prepare-commit-msg
models/: ppocr6_textline_ori.onnx
simple_ppocr6/: __init__.py
