[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ppocr6"
version = "0.3.0"
description = "PP-OCRv6 ONNX OCR: HEURISTIC GPU, batched rec, default small model."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Hanmin Wang", email = "orc_wang@hotmail.com,1426253@qq.com" }
]
requires-python = ">=3.7"
dependencies = [
  "onnxruntime",
  "opencv-python",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/wanghanmin/simple_ppocr6"
Source = "https://github.com/wanghanmin/simple_ppocr6"
